--- a/.github/workflows/deploy-vps.yml
+++ b/.github/workflows/deploy-vps.yml
@@ -3,7 +3,7 @@ name: Deploy to VPS
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   deploy:
@@ -19,7 +19,7 @@ jobs:
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd /opt/mcp-servers/mcp-reddit
-            git pull origin main
+            git pull origin master
             docker compose down
             docker compose up -d --build
             echo "Deployment completed at $(date)"
